--- a/5-haloanyagok/okt.html
+++ b/5-haloanyagok/okt.html
@@ -24,18 +24,27 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="bevhalo.html">Bevezetés</a></li>
-            <li><a href="halo1.html">Hálózati ismeretek</a></li>
-            <li><a href="halo2.html">Hálózati alkalmazások</a></li>
-            <li><a href="web.html">Világháló</a></li>
-            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
-            <li><a href="haloptt.html">Programtanterv</a></li>
-            <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
-            <li><a href="#" id="aktiv">Oktatási anyagok</a></li>
+            <li><a href="halo1.html" id="aktiv">Anyagaim</a></li>
+            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
           </ul>
         </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
+            <li><a href="haloosi3.html">Hálózati réteg</a></li>
+            <li><a href="haloosi4.html">Szállítási réteg</a></li>
+            <li><a href="web.html">Világháló</a></li>
+            <li><a href="#" id="aktiv">Oktatási anyagok</a></li>
+            <li><a href="PT.html">Packet Tracer</a></li>
+            <li><a href="haloptt.html">Programtanterv</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák</a></li>
+          </ul>
+        </nav>
+
         <h3>Cisco Hálózati Akadémia</h3>
         <p><a href="https://www.netacad.hu/" target=_blank>Cisco Hálózati Akadémia</a></p>
 
