--- a/5-haloanyagok/PT.html
+++ b/5-haloanyagok/PT.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
     <title>Packet Tracer</title>
-    <link rel="stylesheet" href="static/main.css">
+    <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,15 +16,35 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
+      <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
       <h1 class="network">Packet Tracer</h1>
     </header>
 
     <main>
       <aside>
-        <a href="halozatok.html">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="halo1.html" id="aktiv">Anyagaim</a></li>
+            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
+            <li><a href="haloosi3.html">Hálózati réteg</a></li>
+            <li><a href="haloosi4.html">Szállítási réteg</a></li>
+            <li><a href="web.html">Világháló</a></li>
+            <li><a href="okt.html">Oktatási anyagok</a></li>
+            <li><a href="#" id="aktiv">Packet Tracer</a></li>
+            <li><a href="haloptt.html">Programtanterv</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák</a></li>
+          </ul>
+        </nav>
+
         <h1>Packet Tracer</h1>
 
         <p><a href="https://drive.google.com/file/d/1kZR0dKvl-ZxE8I-fgeCAi7w0W3Ai8HYb/view?usp=sharing" target=_blank>Parancs segédlet 1</a></p>
@@ -37,7 +57,7 @@
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
-      <img src="static/cc.logo.large.png" alt="cc">
+      <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
 </html>
