--- a/5-haloanyagok/haloosi3.html
+++ b/5-haloanyagok/haloosi3.html
@@ -34,8 +34,8 @@
       <section>
         <nav>
           <ul>
-            <li><a href="#" id="aktiv">Fizikai és adatkapcsolati réteg</a></li>
-            <li><a href="haloosi3.html">Hálózati réteg</a></li>
+            <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
+            <li><a href="#" id="aktiv">Hálózati réteg</a></li>
             <li><a href="haloosi4.html">Szállítási réteg</a></li>
             <li><a href="web.html">Világháló</a></li>
             <li><a href="okt.html">Oktatási anyagok</a></li>
@@ -44,12 +44,19 @@
             <li><a href="vizsgakhalo.html">Vizsgák</a></li>
           </ul>
         </nav>
-        <h3>OSI 1-2 - Fizikai és adatkapcsolati réteg</h3>
-        <p><a href="../osi12/fizikai.html">Fizikai réteg</a></p>
-        <p><a href="../osi12/adatkapcs.html">Adatkapcsolati réteg</a></p>
-        <p><a href="../osi12/kabelek.html">Kábelek</a></p>
-        <p><a href="../osi12/switch.html">Switch (kapcsoló)</a></p>
-        <p><a href="../osi12/wireless.html">Vezeték nélküli</a></p>
+        
+        <h3>OSI 3 - Hálózati réteg - IP</h3>
+        <p><a href="../osi3/IPv4.html">IPv4</a></p>
+        <p><a href="../osi3/IPv6.html">IPv6</a></p>
+        <p><a href="../osi3/tartcimt.html">Tartomány, címtár</a></p>
+        <p><a href="../osi3/halozatok.html">Hálózatok kategóriái</a></p>
+        <p><a href="../osi3/komm.html">Kommunikáció 1</a></p>
+        <p><a href="../osi3/iot.html">Internet of Things</a></p>
+
+        <h3>OSI 3 - Hálózati réteg - Routerek</h3>
+        <p><a href="../osi3/router.html">Routerek</a></p>
+        <p><a href="../osi3/vlan.html">VLAN</a></p>
+        <p><a href="../osi3/routerutv.html">Router-útvonalak</a></p>
 
         <h3>Packet Tracer</h3>
         <p><a href="PT.html">Packet Tracer</a></p>
