--- a/5-haloanyagok/haloosi4.html
+++ b/5-haloanyagok/haloosi4.html
@@ -24,13 +24,27 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="ieta21.html">Hálózatok I.</a></li>
+            <li><a href="halo1.html" id="aktiv">Anyagaim</a></li>
+            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
             <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
             <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
           </ul>
         </nav>
       </aside>
       <section>
+        <nav>
+          <ul>
+            <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
+            <li><a href="haloosi3.html">Hálózati réteg</a></li>
+            <li><a href="#" id="aktiv">Szállítási réteg</a></li>
+            <li><a href="web.html">Világháló</a></li>
+            <li><a href="okt.html">Oktatási anyagok</a></li>
+            <li><a href="PT.html">Packet Tracer</a></li>
+            <li><a href="haloptt.html">Programtanterv</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák</a></li>
+          </ul>
+        </nav>
+
         <h3>OSI 4 - Szállítási réteg</h3>
           <p><a href="../osi4/szall.html">Szállítási réteg</a></p>
   
