--- a/5-halozatok/halo19.html
+++ b/5-halozatok/halo19.html
@@ -22,6 +22,7 @@
       <aside>
         <nav>
           <ul>
+            <li><a href="../5-haloanyagok/halo1.html">Anyagaim</a></li>
             <li><a href="ieta21.html" id="aktiv">Hálózatok I.</a></li>
             <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
             <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
