--- a/7-halozatok3/halo28.html
+++ b/7-halozatok3/halo28.html
@@ -22,6 +22,7 @@
       <aside>
         <nav>
           <ul>
+            <li><a href="../5-haloanyagok/halo1.html">Anyagaim</a></li>
             <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
             <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
             <li><a href="halo21.html" id="aktiv">Hálózatok III.</a></li>
