--- a/2-pc/karbhiba.html
+++ b/2-pc/karbhiba.html
@@ -20,15 +20,7 @@
 
     <main>
       <aside>
-        <nav>
-          <ul>
-            <li><a href="bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="#" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
@@ -38,6 +30,9 @@
             <li><a href="nyomtatok.html">Nyomtatók és egyéb perifériák</a></li>
           </ul>
         </nav>
+      </aside>
+      <section>
+        
 
         <h1>Megelőző karbantartás és hibakeresés (2+8 óra)</h1>
 
