--- a/3-rendszer/android.html
+++ b/3-rendszer/android.html
@@ -22,16 +22,7 @@
 
     <main>
       <aside>
-        <nav>
-          <ul>
-            <li><a href="bemeneti.html">Bemeneti teszt</a></li>
-            <li><a href="#" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      
-      <section>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="os.html">Operációs rendszerek</a></li>
@@ -44,7 +35,9 @@
             <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
           </ul>
         </nav>
-
+      </aside>
+      
+      <section>
         <h1>Android</h1>
 
         <h3>Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</h3>
