--- a/4-elektronika/okostelefon.html
+++ b/4-elektronika/okostelefon.html
@@ -22,15 +22,7 @@
 
     <main>
       <aside>
-        <nav>
-          <ul>
-            <li><a href="bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="elektr.html" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="elektr.html">Elektronika</a></li>
@@ -39,7 +31,8 @@
             <li><a href="#" id="aktiv">Okoseszközök</a></li>
           </ul>
         </nav>
-
+      </aside>
+      <section>
         <p>Tartalom</p>
         <ul id="t">
           <li><a href="#okost">Okostelefonok</a></li>
