--- a/8-hor/halo24.html
+++ b/8-hor/halo24.html
@@ -20,17 +20,10 @@
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="#" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
-        <nav>
-          <ul>
+            <li><a href="hor.html">Bevezetés</a></li>
             <li><a href="ieta25.html">A szállítási és az alkalmazási réteg</a></li>
             <li><a href="#" id="aktiv">Statikus és dinamikus címfordítás lehetőségei</a></li>
             <li><a href="windowsserver.html">Windows Server</a></li>
@@ -40,7 +33,8 @@
             <li><a href="felho.html">Felhőszolgáltatások</a></li>
           </ul>
         </nav>
-
+      </aside>
+      <section>
         <h1>Statikus és dinamikus címfordítás lehetőségei</h1>
 
         <p>A témakör célja, hogy a tanulók megértsék a címfordítás szükségességét, típusait, és legyenek képesek statikus és dinamikus címfordítás megvalósítására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
