--- a/8-hor/windowsserver.html
+++ b/8-hor/windowsserver.html
@@ -22,17 +22,10 @@
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="#" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
-        <nav>
-          <ul>
+            <li><a href="hor.html">Bevezetés</a></li>
             <li><a href="ieta25.html">A szállítási és az alkalmazási réteg</a></li>
             <li><a href="halo24.html">Statikus és dinamikus címfordítás lehetőségei</a></li>
             <li><a href="#" id="aktiv">Windows Server</a></li>
@@ -42,7 +35,8 @@
             <li><a href="felho.html">Felhőszolgáltatások</a></li>
           </ul>
         </nav>
-
+      </aside>
+      <section>
         <h1>Windows szerver telepítése és üzemeltetése (8+54 óra)</h1>
 
         <p>A témakörön belül a tanulók a Windows szerverek verzióival, telepítési módjaival és az üzemeltetésük során felmerülő tipikus feladatokkal ismerkednek meg. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
