--- a/office/kiadvany.html
+++ b/office/kiadvany.html
@@ -22,6 +22,7 @@
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="office.html">Irodai szoftverek</a></li>
