--- a/office/ktttablazat.html
+++ b/office/ktttablazat.html
@@ -22,7 +22,7 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="javascript:history.back()">Vissza</a></p>
       </aside>
       <section>
         <h1>Haladó szintű táblázatkezelési ismeretek</h1>
