--- a/office/office.html
+++ b/office/office.html
@@ -22,6 +22,7 @@
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="#" id="aktiv">Irodai szoftverek</a></li>
@@ -32,6 +33,16 @@
             <li><a href="texlatex.html">TeX / LaTeX</a></li>
           </ul>
         </nav>
+        <p>#szövegszerkesztő</p>
+        <p>#táblázatkezelő</p>
+        <p>#prezentáció</p>
+        <p>#e-mail kliens</p>
+        <p>#naptár</p>
+        <p>#projektmenedzsment</p>
+        <p>#feladatkezelő</p>
+        <p>#PDF</p>
+        <p>#felhőalapú tárolás</p>
+        <p>#kollaborációs eszközök</p>
       </aside>
       <section>
         <h1>Programtanterv</h1>
