--- a/1-italapok/binary.html
+++ b/1-italapok/binary.html
@@ -22,25 +22,19 @@
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="infelm.html" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
-        <nav>
-          <ul>
+            <li><a href="1-szgtud.html">Bevezetés</a></li>
             <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
             <li><a href="#" id="aktiv">Számrendszerek</a></li>
-            <li><a href="nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
+            <li><a href="nummat.html">Numerikus matematika I.</a></li>
             <li><a href="r.html">Numerikus programozás</a></li>
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
           </ul>
         </nav>
-
+      </aside>
+      <section>
         <h1>Kettes számrendszer</h1>
 
         <p>Adott számú számjegy.</p>
