--- a/1-italapok/nummat.html
+++ b/1-italapok/nummat.html
@@ -22,26 +22,20 @@
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="infelm.html" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
-        <nav>
-          <ul>
+            <li><a href="1-szgtud.html">Bevezetés</a></li>
             <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
             <li><a href="binary.html">Számrendszerek</a></li>
-            <li><a href="#" id="aktiv">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></li>
+            <li><a href="#" id="aktiv">Numerikus matematika I.</a></li>
             <li><a href="r.html">Numerikus programozás</a></li>
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
           </ul>
         </nav>
-
-        <h1>Numerikus matematika 1.</h1>
+      </aside>
+      <section>
+        <h1>Numerikus matematika 1. - számábrázolás, hibabecslés</h1>
 
         <h3>Numerikus matematika 1.</h3>
         <ol>
