--- a/2-pc/2-pc.html
+++ b/2-pc/2-pc.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
     <title>Személyi számítógép</title>
-    <link rel="stylesheet" href="static/main.css">
+    <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,17 +16,20 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
+      <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
       <h1 class="italapok">Személyi számítógép</h1>
     </header>
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="2-pc/bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="2-pc/szamtechtortenet.html">Kurzusok</a></li>
-            <li><a href="2-pc/zaro.html">Záró teszt</a></li>
+            <li><a href="szamtechtortenet.html" id="aktiv">A számítástechnika története</a></li>
+            <li><a href="pc.html">A PC részei, PC szét- és összeszerelése, bővítése</a></li>
+            <li><a href="karbhiba.html">Megelőző karbantartás és hibakeresés</a></li>
+            <li><a href="laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés</a></li>
+            <li><a href="nyomtatok.html">Nyomtatók és egyéb perifériák</a></li>
           </ul>
         </nav>
       </aside>
@@ -174,7 +177,7 @@
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
-      <img src="static/cc.logo.large.png" alt="cc">
+      <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
 </html>
