--- a/2-pc/szamtechtortenet.html
+++ b/2-pc/szamtechtortenet.html
@@ -22,15 +22,7 @@
 
     <main>
       <aside>
-        <nav>
-          <ul>
-            <li><a href="bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="#" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="szamtechtortenet.html" id="aktiv">A számítástechnika története</a></li>
@@ -40,6 +32,9 @@
             <li><a href="nyomtatok.html">Nyomtatók és egyéb perifériák</a></li>
           </ul>
         </nav>
+      </aside>
+      <section>
+        
 
         <h1>A számítástechnika története</h1>
 
