--- a/3-rendszer/fajl.html
+++ b/3-rendszer/fajl.html
@@ -22,15 +22,7 @@
 
     <main>
       <aside>
-        <nav>
-          <ul>
-            <li><a href="bemeneti.html">Bemeneti teszt</a></li>
-            <li><a href="#" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="os.html">Operációs rendszerek</a></li>
@@ -43,7 +35,8 @@
             <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
           </ul>
         </nav>
-
+      </aside>
+      <section>
         <h1>Fájlok, fájlrendszerek</h1>
 
         <p>Adatállomány</p>
