--- a/3-rendszer/virtkont.html
+++ b/3-rendszer/virtkont.html
@@ -22,15 +22,7 @@
 
     <main>
       <aside>
-        <nav>
-          <ul>
-            <li><a href="bemeneti.html">Bemeneti teszt</a></li>
-            <li><a href="#" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="os.html">Operációs rendszerek</a></li>
@@ -43,7 +35,8 @@
             <li><a href="#" id="aktiv">Virtualizáció és konténerek</a></li>
           </ul>
         </nav>
-
+      </aside>
+      <section>
         <h1>Szerverek és felhőszolgáltatások - Virtualizáció és konténerek (8+54 óra)</h1>
         <p>A témakör célja az ismertebb virtualizációs technológiák mélyebb megismerése, a konténertechnológiákat is beleértve, valamint ezek segítségével virtuális gépek és konténerek létrehozása és menedzselése. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
