--- a/4-elektronika/dron.html
+++ b/4-elektronika/dron.html
@@ -22,15 +22,7 @@
 
     <main>
       <aside>
-        <nav>
-          <ul>
-            <li><a href="bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="elektr.html" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="elektr.html">Elektronika</a></li>
@@ -39,7 +31,8 @@
             <li><a href="okostelefon.html">Okoseszközök</a></li>
           </ul>
         </nav>
-
+      </aside>
+      <section>
         <h3>Digitális Témahét - Drónok az oktatásban?</h3>
         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pGGjvOKnXus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
       </section>
