--- a/8-hor/hor.html
+++ b/8-hor/hor.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
     <title>Hálózati operációs rendszerek</title>
-    <link rel="stylesheet" href="static/main.css">
+    <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,19 +16,35 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
+      <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
       <h1 class="rendszuzem">Hálózati operációs rendszerek</h1>
     </header>
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="8-hor/bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="8-hor/ieta25.html">Kurzusok</a></li>
-            <li><a href="8-hor/zaro.html">Záró teszt</a></li>
+            <li><a href="#" id="aktiv">Bevezetés</a></li>
+            <li><a href="ieta25.html">A szállítási és az alkalmazási réteg</a></li>
+            <li><a href="halo24.html">Statikus és dinamikus címfordítás lehetőségei</a></li>
+            <li><a href="windowsserver.html">Windows Server</a></li>
+            <li><a href="ubuntuserver.html">Ubuntu Server</a></li>
+            <li><a href="winlinint.html">Windows és Linux integrációja</a></li>
+            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <li><a href="felho.html">Felhőszolgáltatások</a></li>
           </ul>
         </nav>
+        <p>#szerver</p>
+        <p>#monitoring</p>
+        <p>#naplózás</p>
+        <p>#biztonsági mentés</p>
+        <p>#rendszerfrissítés</p>
+        <p>#felügyelet</p>
+        <p>#automatizálás</p>
+        <p>#hibaelhárítás</p>
+        <p>#távoli hozzáférés</p>
+        <p>#felhasználói fiókok</p>
       </aside>
       <section>
         <h1>Hálózati operációs rendszerek</h1>
@@ -68,7 +84,7 @@
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
-      <img src="static/cc.logo.large.png" alt="cc">
+      <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
 </html>
