--- a/8-hor/ieta25.html
+++ b/8-hor/ieta25.html
@@ -20,17 +20,10 @@
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="bemeneti.html">Szintfelmérő teszt</a></li>
-            <li><a href="#" id="aktiv">Kurzusok</a></li>
-            <li><a href="zaro.html">Záró teszt</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
-        <nav>
-          <ul>
+            <li><a href="hor.html">Bevezetés</a></li>
             <li><a href="#" id="aktiv">A szállítási és az alkalmazási réteg</a></li>
             <li><a href="halo24.html">Statikus és dinamikus címfordítás lehetőségei</a></li>
             <li><a href="windowsserver.html">Windows Server</a></li>
@@ -40,6 +33,9 @@
             <li><a href="felho.html">Felhőszolgáltatások</a></li>
           </ul>
         </nav>
+      </aside>
+      <section>
+        
 
         <h1>A szállítási és az alkalmazási réteg</h1>
 
