--- a/9-biztonsag/ieta27alkbizt.html
+++ b/9-biztonsag/ieta27alkbizt.html
@@ -20,16 +20,25 @@
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="#" id="aktiv">Informatikai biztonság</a></li>
-            
-            
             <li><a href="bizt.html">Hálózati biztonság</a></li>
             <li><a href="pchiba.html">Számítógépes hibaelhárítás</a></li>
             <li><a href="kript.html">Kriptográfia</a></li>
           </ul>
         </nav>
+        <p>#szerver</p>
+        <p>#monitoring</p>
+        <p>#naplózás</p>
+        <p>#biztonsági mentés</p>
+        <p>#rendszerfrissítés</p>
+        <p>#felügyelet</p>
+        <p>#automatizálás</p>
+        <p>#hibaelhárítás</p>
+        <p>#távoli hozzáférés</p>
+        <p>#felhasználói fiókok</p>
       </aside>
       <section>
         <h1>IT-biztonság</h1>
