--- a/9-biztonsag/kript.html
+++ b/9-biztonsag/kript.html
@@ -22,11 +22,10 @@
 
     <main>
       <aside>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="ieta27alkbizt.html">Informatikai biztonság</a></li>
-            
-            
             <li><a href="bizt.html">Hálózati biztonság</a></li>
             <li><a href="pchiba.html">Számítógépes hibaelhárítás</a></li>
             <li><a href="#" id="aktiv">Kriptográfia</a></li>
