--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div id="index">
       <section id="bemutat">
-        
+        <img id="elvalaszto" src="static/TPlogo.png" alt="p">
       </section>
     </div>
 
