--- a/5-haloanyagok/PT.html
+++ b/5-haloanyagok/PT.html
@@ -22,16 +22,7 @@
 
     <main>
       <aside>
-        <nav>
-          <ul>
-            <li><a href="halo1.html" id="aktiv">Anyagaim</a></li>
-            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
-            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
-            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
@@ -42,9 +33,14 @@
             <li><a href="#" id="aktiv">Packet Tracer</a></li>
             <li><a href="haloptt.html">Programtanterv</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák</a></li>
+            <hr>
+            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
           </ul>
         </nav>
-
+      </aside>
+      <section>
         <h1>Packet Tracer</h1>
 
         <p><a href="https://drive.google.com/file/d/1kZR0dKvl-ZxE8I-fgeCAi7w0W3Ai8HYb/view?usp=sharing" target=_blank>Parancs segédlet 1</a></p>
