--- a/5-haloanyagok/haloosi4.html
+++ b/5-haloanyagok/haloosi4.html
@@ -22,16 +22,7 @@
 
     <main>
       <aside>
-        <nav>
-          <ul>
-            <li><a href="halo1.html" id="aktiv">Anyagaim</a></li>
-            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
-            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
-            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
-          </ul>
-        </nav>
-      </aside>
-      <section>
+        <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
             <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
@@ -42,11 +33,16 @@
             <li><a href="PT.html">Packet Tracer</a></li>
             <li><a href="haloptt.html">Programtanterv</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák</a></li>
+            <hr>
+            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
+            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
+            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
           </ul>
         </nav>
-
+      </aside>
+      <section>
         <h3>OSI 4 - Szállítási réteg</h3>
-          <p><a href="../osi4/szall.html">Szállítási réteg</a></p>
+        <p><a href="../osi4/szall.html">Szállítási réteg</a></p>
   
         <h3>OSI 5-6-7 - Viszony, megjelítési, alkalmazási réteg</h3>
           <h1>Hálózati alkalmazások</h1>
