--- a/index.html
+++ b/index.html
@@ -23,17 +23,7 @@
       <h1>Számítógépes rendszerek</h1>
     </header>
 
-    <div class="fulszoveg">
-      <div class="menu">
-        <a href="1-italapok/1-szgtud.html">Számítógép-tudomány</a>
-        <a href="2-pc/2-pc.html">Személyi számítógép</a>
-        <a href="3-rendszer/os.html">Operációs rendszerek</a>
-        <a href="4-elektronika/elektr.html">Elektronika</a>
-        <a href="5-haloanyagok/bevhalo.html">Hálózatok</a>
-        <a href="8-hor/hor.html">Rendszerüzemeltetés</a>
-        <a href="9-biztonsag/ieta27alkbizt.html">Biztonság</a>
-        <a href="office/office.html">Irodai szoftverek</a>
-      </div>
+    <div class="alcim" id="bev">
       <div>
         <p>Üdvözlünk weboldalunkon, ahol átfogó információkat és hasznos útmutatókat találsz a számítógépek, operációs rendszerek, hálózatok, rendszer-üzemeltetés, elektronika és irodai szoftverek világából!</p>
         <p>Fedezd fel a legújabb technológiai trendeket és tippeket, hogy hogyan hozhatod ki a legtöbbet a számítógépedből, ismerd meg az operációs rendszerek működését és konfigurálását, valamint a hálózatok felépítését és biztonsági beállításait.</p>
@@ -41,6 +31,82 @@
         <p>Emellett praktikus tanácsokat és bemutatókat kínálunk az irodai szoftverek használatához, hogy könnyedén kezelhesd a dokumentumokat, táblázatokat és prezentációkat.</p>
         <p>Oldalunk célja, hogy a technológia minden aspektusát érthetővé és elérhetővé tegyük számodra. Látogass el hozzánk gyakran, hogy mindig naprakész maradj a legújabb fejleményekkel és megoldásokkal kapcsolatban!</p>
       </div>
+    </div>
+
+    <h1>Minden, ami technológia!</h1>
+
+    <div id="kezdolap">
+      <section>
+        <img src="1-italapok/circuit.jpg" alt="circuit">
+        <div>
+          <h3>Számítógép-tudomány</h3>
+          <p>A számítógép-tudomány az informatika alapvető területe, amely a számítógépek és számítógépes rendszerek elméleti és gyakorlati aspektusaival foglalkozik. Magában foglalja az algoritmusok tervezését és elemzését, a programozási nyelvek fejlesztését, az adatstruktúrák optimalizálását, valamint a mesterséges intelligencia, a hálózatok és a kiberbiztonság területeit. A számítógép-tudomány alapvető szerepet játszik a technológiai innovációkban, és olyan eszközöket és módszereket biztosít, amelyek lehetővé teszik a komplex problémák megoldását különböző iparágakban, beleértve az egészségügyet, a pénzügyet, az oktatást és a szórakoztatást.</p>
+          <button><a href="1-italapok/1-szgtud.html">Tovább</a></button>
+        </div>
+      </section>
+
+      <section>
+        <div>
+          <h3>Személyi számítógép</h3>
+          <p>A személyi számítógép (PC) egy olyan multifunkcionális elektronikai eszköz, amelyet egyetlen felhasználó számára terveztek, és amely otthoni, irodai és iskolai környezetben egyaránt használható. A PC-k lehetővé teszik a felhasználók számára a különféle szoftverek futtatását, mint például a szövegszerkesztők, táblázatkezelők, grafikai programok és játékok, valamint az internethez való hozzáférést. Az egyszerű kezelhetőség, a széleskörű alkalmazási lehetőségek és a folyamatos technológiai fejlődés tette a személyi számítógépet a modern élet nélkülözhetetlen eszközévé, amely támogatja a munkavégzést, a tanulást és a szórakozást.</p>
+          <button><a href="2-pc/2-pc.html">Tovább</a></button>
+        </div>
+        <img src="static/laptop-5673901_1920-169.jpg" alt="laptop-5673901_1920-169">
+      </section>
+
+      <section>
+        <img src="3-rendszer/rendszerek.jpg" alt="rendszerek">
+        <div>
+          <h3>Operációs rendszerek</h3>
+          <p>Az operációs rendszer (OS) a számítógépek és mobil eszközök alapvető szoftvere, amely a hardver és a felhasználói alkalmazások közötti kommunikációt és erőforrások kezelését irányítja. Az OS biztosítja az alapvető funkciókat, mint például a fájlkezelést, a memóriakezelést, a folyamatok ütemezését és a perifériák kezelését, így lehetővé téve a felhasználók számára a különböző programok futtatását és a hatékony munkavégzést. Népszerű operációs rendszerek közé tartozik a Microsoft Windows, macOS, Linux és az Android. Az operációs rendszerek kulcsfontosságú szerepet játszanak a számítógépes rendszerek stabilitásának, biztonságának és teljesítményének biztosításában.</p>
+          <button><a href="3-rendszer/os.html">Tovább</a></button>
+        </div>
+      </section>
+
+      <section>
+        <div>
+          <h3>Elektronika</h3>
+          <p>A számítógépes elektronika a számítógépek és elektronikus eszközök hardveres összetevőivel foglalkozik, beleértve a processzorokat, memóriát, alaplapokat és egyéb áramköröket. Ez a terület a digitális áramkörök tervezésére és megvalósítására összpontosít, amelyek lehetővé teszik a számítógépes rendszerek működését és teljesítményének optimalizálását. A számítógépes elektronika alapvető szerepet játszik a modern technológiai eszközök fejlődésében, biztosítva a gyors adatfeldolgozást, a megbízható működést és az energiahatékonyságot, amely elősegíti a fejlett alkalmazások és rendszerek hatékony működését.</p>
+          <button><a href="4-elektronika/elektr.html">Tovább</a></button>
+        </div>
+        <img src="4-elektronika/hand-7014643_1920-169.jpg" alt="hand-7014643_1920-169">
+      </section>
+
+      <section>
+        <img src="5-haloanyagok/globe-8704013_1280-169.jpg" alt="globe-8704013_1280-169">
+        <div>
+          <h3>Hálózatok</h3>
+          <p>A számítógépes hálózatok az adatkommunikációs rendszerek, amelyek lehetővé teszik a számítógépek és egyéb eszközök közötti információcserét és erőforrás-megosztást. Ezek a hálózatok lehetnek helyi (LAN), amely egy adott területen belül, például egy irodában vagy otthon működik, vagy kiterjedt (WAN), amely globális kapcsolatokat biztosít, mint például az internet. A számítógépes hálózatok kulcsfontosságúak az adatbiztonság, a hatékony kommunikáció és a központi erőforrások, például fájlok és nyomtatók megosztásának támogatásában, hozzájárulva ezzel a modern informatikai infrastruktúra stabil működéséhez és hatékonyságához.</p>
+          <button><a href="5-haloanyagok/bevhalo.html">Tovább</a></button>
+        </div>
+      </section>
+
+      <section>
+        <div>
+          <h3>Rendszerüzemeltetés</h3>
+          <p>A hálózati rendszerüzemeltetés a számítógépes hálózatok működésének és teljesítményének biztosítását jelenti, amely magában foglalja a hálózati eszközök konfigurálását, karbantartását és felügyeletét. Az üzemeltetők feladatai közé tartozik a hálózati infrastruktúra, mint például routerek, switch-ek és tűzfalak, megfelelő működésének ellenőrzése, a biztonsági intézkedések alkalmazása, valamint a problémák gyors azonosítása és elhárítása. A hálózati rendszerüzemeltetés célja a zavartalan adatforgalom fenntartása, a rendszer megbízhatóságának növelése és a potenciális biztonsági kockázatok minimalizálása, hogy a felhasználók és alkalmazások hatékonyan és biztonságosan tudjanak működni.</p>
+          <button><a href="8-hor/hor.html">Tovább</a></button>
+        </div>
+        <img src="8-hor/technology-8676538_640.jpg" alt="technology-8676538_640">
+      </section>
+
+      <section>
+        <img src="9-biztonsag/computer-1591018_1280.jpg" alt="computer-1591018_1280">
+        <div>
+          <h3>Biztonság</h3>
+          <p>Az informatikai és hálózati biztonság a digitális rendszerek és hálózatok védelmét célozza meg, hogy megakadályozza az adatlopást, a rendszermegszakításokat és a kiber támadásokat. Az informatikai biztonság a szoftverek, adatok és felhasználói hozzáférések védelmét jelenti, míg a hálózati biztonság a kommunikációs csatornák és eszközök biztonságát biztosítja. E két terület összhangban működik, alkalmazva olyan eszközöket és technológiákat, mint tűzfalak, titkosítás, behatolás-észlelés és -megelőzés, hogy megvédje a vállalatok és egyének digitális információit és infrastruktúráját a fenyegetésekkel szemben.</p>
+          <button><a href="9-biztonsag/ieta27alkbizt.html">Tovább</a></button>
+        </div>
+      </section>
+
+      <section>
+        <div>
+          <h3>Irodai szoftverek</h3>
+          <p>Az irodai szoftverek olyan programcsomagok, amelyek a mindennapi üzleti és adminisztratív feladatok hatékony elvégzését segítik elő. Ezek közé tartoznak a szövegszerkesztők, táblázatkezelők, prezentációkészítők és e-mail kezelő alkalmazások, amelyek lehetővé teszik a dokumentumok létrehozását, adatkezelést, prezentációk előkészítését és a kommunikációt. Az irodai szoftverek, mint például a Microsoft Office vagy a Google Workspace, széleskörű funkciókat kínálnak, amelyek támogatják a munkafolyamatokat, növelik a termelékenységet és elősegítik a kollégák közötti együttműködést, mindezt felhasználóbarát felületeken keresztül.</p>
+          <button><a href="office/office.html">Tovább</a></button>
+        </div>
+        <img src="office/ai-generated-8876540_1280-169.png" alt="ai-generated-8876540_1280-169">
+      </section>
     </div>
 
     <img id="elvalaszto" src="static/TPlogo.png" alt="p">
