--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div id="kezdolap">
       <section>
-        <img src="1-italapok/circuit.jpg" alt="circuit">
+        <img src="1-italapok/chip-7732459_1280.png" alt="chip-7732459_1280">
         <div>
           <h3>Számítógép-tudomány</h3>
           <p>A számítógép-tudomány az informatika alapvető területe, amely a számítógépek és számítógépes rendszerek elméleti és gyakorlati aspektusaival foglalkozik. Magában foglalja az algoritmusok tervezését és elemzését, a programozási nyelvek fejlesztését, az adatstruktúrák optimalizálását, valamint a mesterséges intelligencia, a hálózatok és a kiberbiztonság területeit. A számítógép-tudomány alapvető szerepet játszik a technológiai innovációkban, és olyan eszközöket és módszereket biztosít, amelyek lehetővé teszik a komplex problémák megoldását különböző iparágakban, beleértve az egészségügyet, a pénzügyet, az oktatást és a szórakoztatást.</p>
