--- a/5-haloanyagok/haloptt.html
+++ b/5-haloanyagok/haloptt.html
@@ -22,9 +22,10 @@
 
     <main>
       <aside>
-        <p><a href="../index.html">Vissza</a></p>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
+            <li><a href="bevhalo.html">Bevezetés</a></li>
             <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
             <li><a href="haloosi3.html">Hálózati réteg</a></li>
             <li><a href="haloosi4.html">Szállítási réteg</a></li>
@@ -33,10 +34,6 @@
             <li><a href="PT.html">Packet Tracer</a></li>
             <li><a href="#" id="aktiv">Programtanterv</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák</a></li>
-            <hr>
-            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
-            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
-            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
           </ul>
         </nav>
       </aside>
