--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div>
           <h3>Hálózatok</h3>
           <p>A számítógépes hálózatok az adatkommunikációs rendszerek, amelyek lehetővé teszik a számítógépek és egyéb eszközök közötti információcserét és erőforrás-megosztást. Ezek a hálózatok lehetnek helyi (LAN), amely egy adott területen belül, például egy irodában vagy otthon működik, vagy kiterjedt (WAN), amely globális kapcsolatokat biztosít, mint például az internet. A számítógépes hálózatok kulcsfontosságúak az adatbiztonság, a hatékony kommunikáció és a központi erőforrások, például fájlok és nyomtatók megosztásának támogatásában, hozzájárulva ezzel a modern informatikai infrastruktúra stabil működéséhez és hatékonyságához.</p>
-          <button><a href="5-haloanyagok/bevhalo.html">Tovább</a></button>
+          <button><a href="beginhalo.html">Tovább</a></button>
         </div>
       </section>
 
