--- a/ptthalo/halo13.html
+++ b/ptthalo/halo13.html
@@ -20,29 +20,23 @@
 
     <main>
       <aside>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="../5-haloanyagok/halo1.html">Anyagaim</a></li>
-            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
-            <li><a href="ieta24.html" id="aktiv">Hálózatok II.</a></li>
-            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+            <li><a href="halo11.html">Hálózatok I. - 1</a></li>
+            <li><a href="halo12.html">Hálózatok I. - 2</a></li>
+            <li><a href="#" id="aktiv">Hálózatok I. - 3</a></li>
+            <li><a href="halo14.html">Hálózatok I. - 4</a></li>
+            <li><a href="halo15.html">Hálózatok I. - 5</a></li>
+            <li><a href="halo16.html">Hálózatok I. - 6</a></li>
+            <li><a href="halo17.html">Hálózatok I. - 7</a></li>
+            <li><a href="halo18.html">Hálózatok I. - 8</a></li>
+            <li><a href="halo19.html">Hálózatok I. - 9</a></li>
+            <li><a href="halo110.html">Hálózatok I. - 10</a></li>
           </ul>
         </nav>
       </aside>
       <section>
-        <nav>
-          <ul>
-            <li><a href="ieta24.html">A hálózati réteg, IPv4-es és IPv6-os címzés, a forgalomirányító alapszintű beállítása</a></li>
-            <li><a href="ieta26.html">Otthoni és kisvállalati hálózat építése és beállítása</a></li>
-            <li><a href="halo11.html">Hálózati eszközök alapszintű konfigurációja</a></li>
-            <li><a href="#" id="aktiv">VLAN-ok használata, VLAN-ok közti forgalomirányítás</a></li>
-            <li><a href="halo15.html">Dinamikus címkiosztás IPv4-környezetben</a></li>
-            <li><a href="halo16.html">IPv6-os címzés és dinamikus címkiosztás IPv6-környezetben</a></li>
-            <li><a href="halo17.html">Harmadik rétegbeli redundancia</a></li>
-            <li><a href="halo110.html">Forgalomirányítási alapok, statikus forgalomirányítás</a></li>
-          </ul>
-        </nav>
-
         <h1>VLAN-ok használata, VLAN-ok közti forgalomirányítás</h1>
 
         <p>A témakör célja, hogy a tanulók ismerjék meg a VLAN-ok szerepét, legyenek képesek VLAN-ok kialakítására, és legyenek tisztában a trönk kapcsolatok szerepével. A tanulók ismerkedjenek meg a VLAN-ok közti forgalomirányítás lehetőségeivel, és legyenek képesek VLAN-ok közti forgalomirányítást megvalósítani. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
