--- a/ptthalo/halo210.html
+++ b/ptthalo/halo210.html
@@ -20,7 +20,21 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="../beginhalo.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="halo21.html">Háló 2. - 1</a></li>
+            <li><a href="halo22.html">Háló 2. - 2</a></li>
+            <li><a href="halo23.html">Háló 2. - 3</a></li>
+            <li><a href="halo24.html">Háló 2. - 4</a></li>
+            <li><a href="halo25.html">Háló 2. - 5</a></li>
+            <li><a href="halo26.html">Háló 2. - 6</a></li>
+            <li><a href="halo27.html">Háló 2. - 7</a></li>
+            <li><a href="halo28.html">Háló 2. - 8</a></li>
+            <li><a href="halo29.html">Háló 2. - 9</a></li>
+            <li><a href="#" id="aktiv">Háló 2. - 10</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Komplex hálózat tervezése, kialakítása</h1>
