--- a/ptthalo/halo24.html
+++ b/ptthalo/halo24.html
@@ -20,17 +20,19 @@
 
     <main>
       <aside>
-        <p><a href="../index.html">Vissza</a></p>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="hor.html">Bevezetés</a></li>
-            <li><a href="ieta25.html">A szállítási és az alkalmazási réteg</a></li>
-            <li><a href="#" id="aktiv">Statikus és dinamikus címfordítás lehetőségei</a></li>
-            <li><a href="windowsserver.html">Windows Server</a></li>
-            <li><a href="ubuntuserver.html">Ubuntu Server</a></li>
-            <li><a href="winlinint.html">Windows és Linux integrációja</a></li>
-            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
-            <li><a href="felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="halo21.html">Háló 2. - 1</a></li>
+            <li><a href="halo22.html">Háló 2. - 2</a></li>
+            <li><a href="halo23.html">Háló 2. - 3</a></li>
+            <li><a href="#" id="aktiv">Háló 2. - 4</a></li>
+            <li><a href="halo25.html">Háló 2. - 5</a></li>
+            <li><a href="halo26.html">Háló 2. - 6</a></li>
+            <li><a href="halo27.html">Háló 2. - 7</a></li>
+            <li><a href="halo28.html">Háló 2. - 8</a></li>
+            <li><a href="halo29.html">Háló 2. - 9</a></li>
+            <li><a href="halo210.html">Háló 2. - 10</a></li>
           </ul>
         </nav>
       </aside>
