--- a/ptthalo/halo27.html
+++ b/ptthalo/halo27.html
@@ -20,28 +20,23 @@
 
     <main>
       <aside>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="../5-haloanyagok/halo1.html">Anyagaim</a></li>
-            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
-            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
-            <li><a href="halo21.html" id="aktiv">Hálózatok III.</a></li>
+            <li><a href="halo21.html">Háló 2. - 1</a></li>
+            <li><a href="halo22.html">Háló 2. - 2</a></li>
+            <li><a href="halo23.html">Háló 2. - 3</a></li>
+            <li><a href="halo24.html">Háló 2. - 4</a></li>
+            <li><a href="halo25.html">Háló 2. - 5</a></li>
+            <li><a href="halo26.html">Háló 2. - 6</a></li>
+            <li><a href="#" id="aktiv">Háló 2. - 7</a></li>
+            <li><a href="halo28.html">Háló 2. - 8</a></li>
+            <li><a href="halo29.html">Háló 2. - 9</a></li>
+            <li><a href="halo210.html">Háló 2. - 10</a></li>
           </ul>
         </nav>
       </aside>
       <section>
-        <nav>
-          <ul>
-            <li><a href="halo21.html">Dinamikus forgalomirányítási ismeretek</a></li>
-            <li><a href="halo23.html">Hozzáférési listák használata</a></li>
-            <li><a href="halo25.html">WAN-technológiák</a></li>
-            <li><a href="halo26.html">Virtuális magánhálózat (VPN) kialakítása</a></li>
-            <li><a href="#" id="aktiv">Minőségbiztosítási alapok, hálózatfelügyelet megvalósítása</a></li>
-            <li><a href="halo28.html">Hálózattervezés, hibaelhárítás</a></li>
-            <li><a href="halo29.html">Hálózatvirtualizáció, hálózatautomatizáció</a></li>
-          </ul>
-        </nav>
-
         <h1>Minőségbiztosítási alapok, hálózatfelügyelet megvalósítása</h1>
 
         <p>A témakör célja, hogy a tanulók alapszintű ismereteket szerezzenek a minőségbiztosítás területén, elsajátítsák a hálózatmonitorozás és a hálózatfelügyelet elméleti alapjait és gyakorlati megvalósításait. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
