--- a/ptthalo/ieta18.html
+++ b/ptthalo/ieta18.html
@@ -20,7 +20,19 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="../beginhalo.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="ieta21.html">Iéta2 - 1</a></li>
+            <li><a href="ieta22.html">Iéta2 - 2</a></li>
+            <li><a href="ieta23.html">Iéta2 - 3</a></li>
+            <li><a href="ieta24.html">Iéta2 - 4</a></li>
+            <li><a href="ieta25.html">Iéta2 - 5</a></li>
+            <li><a href="ieta26.html">Iéta2 - 6</a></li>
+            <li><a href="ieta27.html">Iéta2 - 7</a></li>
+            <li><a href="#" id="aktiv">Iéta1 - 8</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>A dolgok internete</h1>
