--- a/ptthalo/ieta25.html
+++ b/ptthalo/ieta25.html
@@ -20,23 +20,20 @@
 
     <main>
       <aside>
-        <p><a href="../index.html">Vissza</a></p>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="hor.html">Bevezetés</a></li>
-            <li><a href="#" id="aktiv">A szállítási és az alkalmazási réteg</a></li>
-            <li><a href="halo24.html">Statikus és dinamikus címfordítás lehetőségei</a></li>
-            <li><a href="windowsserver.html">Windows Server</a></li>
-            <li><a href="ubuntuserver.html">Ubuntu Server</a></li>
-            <li><a href="winlinint.html">Windows és Linux integrációja</a></li>
-            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
-            <li><a href="felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="ieta21.html">Iéta2 - 1</a></li>
+            <li><a href="ieta22.html">Iéta2 - 2</a></li>
+            <li><a href="ieta23.html">Iéta2 - 3</a></li>
+            <li><a href="ieta24.html">Iéta2 - 4</a></li>
+            <li><a href="#" id="aktiv">Iéta2 - 5</a></li>
+            <li><a href="ieta26.html">Iéta2 - 6</a></li>
+            <li><a href="ieta27.html">Iéta2 - 7</a></li>
+            <li><a href="ieta18.html">Iéta1 - 8</a></li>
           </ul>
-        </nav>
       </aside>
       <section>
-        
-
         <h1>A szállítási és az alkalmazási réteg</h1>
 
         <p>A témakör célja a szállítási réteg két fő protokollja, a TCP és a UDP ismertetése. Bemutatja a TCP/IP-modell alkalmazási rétegének célját és a benne használt protokollokat, különös tekintettel a DNS- és DHCP-protokollokra, a webes és elektronikus levelezési, valamint fájlmegosztási protokollokra. A témakör elsajátítását követően a tanuló:</p>
