--- a/ptthalo/ieta27.html
+++ b/ptthalo/ieta27.html
@@ -20,15 +20,18 @@
 
     <main>
       <aside>
-        <p><a href="../index.html">Vissza</a></p>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="#" id="aktiv">Informatikai biztonság</a></li>
-            <li><a href="bizt.html">Hálózati biztonság</a></li>
-            <li><a href="pchiba.html">Számítógépes hibaelhárítás</a></li>
-            <li><a href="kript.html">Kriptográfia</a></li>
+            <li><a href="ieta21.html">Iéta2 - 1</a></li>
+            <li><a href="ieta22.html">Iéta2 - 2</a></li>
+            <li><a href="ieta23.html">Iéta2 - 3</a></li>
+            <li><a href="ieta24.html">Iéta2 - 4</a></li>
+            <li><a href="ieta25.html">Iéta2 - 5</a></li>
+            <li><a href="ieta26.html">Iéta2 - 6</a></li>
+            <li><a href="#" id="aktiv">Iéta2 - 7</a></li>
+            <li><a href="ieta18.html">Iéta1 - 8</a></li>
           </ul>
-        </nav>
         <p>#szerver</p>
         <p>#monitoring</p>
         <p>#naplózás</p>
