--- a/5-haloanyagok/bevhalo.html
+++ b/5-haloanyagok/bevhalo.html
@@ -22,12 +22,18 @@
 
     <main>
       <aside>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="../5-haloanyagok/halo1.html">Anyagaim</a></li>
-            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
-            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
-            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+            <li><a href="#" id="aktiv">Bevezetés</a></li>
+            <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
+            <li><a href="haloosi3.html">Hálózati réteg</a></li>
+            <li><a href="haloosi4.html">Szállítási réteg</a></li>
+            <li><a href="web.html">Világháló</a></li>
+            <li><a href="okt.html">Oktatási anyagok</a></li>
+            <li><a href="PT.html">Packet Tracer</a></li>
+            <li><a href="haloptt.html">Programtanterv</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák</a></li>
           </ul>
         </nav>
       </aside>
