--- a/ptthalo/halo16.html
+++ b/ptthalo/halo16.html
@@ -20,29 +20,23 @@
 
     <main>
       <aside>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="../5-haloanyagok/halo1.html">Anyagaim</a></li>
-            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
-            <li><a href="ieta24.html" id="aktiv">Hálózatok II.</a></li>
-            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+            <li><a href="halo11.html">Hálózatok I. - 1</a></li>
+            <li><a href="halo12.html">Hálózatok I. - 2</a></li>
+            <li><a href="halo13.html">Hálózatok I. - 3</a></li>
+            <li><a href="halo14.html">Hálózatok I. - 4</a></li>
+            <li><a href="halo15.html">Hálózatok I. - 5</a></li>
+            <li><a href="#" id="aktiv">Hálózatok I. - 6</a></li>
+            <li><a href="halo17.html">Hálózatok I. - 7</a></li>
+            <li><a href="halo18.html">Hálózatok I. - 8</a></li>
+            <li><a href="halo19.html">Hálózatok I. - 9</a></li>
+            <li><a href="halo110.html">Hálózatok I. - 10</a></li>
           </ul>
         </nav>
       </aside>
       <section>
-        <nav>
-          <ul>
-            <li><a href="ieta24.html">A hálózati réteg, IPv4-es és IPv6-os címzés, a forgalomirányító alapszintű beállítása</a></li>
-            <li><a href="ieta26.html">Otthoni és kisvállalati hálózat építése és beállítása</a></li>
-            <li><a href="halo11.html">Hálózati eszközök alapszintű konfigurációja</a></li>
-            <li><a href="halo13.html">VLAN-ok használata, VLAN-ok közti forgalomirányítás</a></li>
-            <li><a href="halo15.html">Dinamikus címkiosztás IPv4-környezetben</a></li>
-            <li><a href="#" id="aktiv">IPv6-os címzés és dinamikus címkiosztás IPv6-környezetben</a></li>
-            <li><a href="halo17.html">Harmadik rétegbeli redundancia</a></li>
-            <li><a href="halo110.html">Forgalomirányítási alapok, statikus forgalomirányítás</a></li>
-          </ul>
-        </nav>
-
         <h1>IPv6-os címzés és dinamikus címkiosztás IPv6-környezetben</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék az IPv6-cím szerepét, szerkezetét, tisztában legyenek használatának szükségességével. A tanulók ismerjék meg az IPv6-címek típusait, és legyenek képesek IPv6-os címzés használatára forgalomirányítókon és végberendezéseken. A tanulók értsék meg a címmeghatározó protokoll szerepét IPv6-környezetben. A tanulók ismerkedjenek meg a dinamikus címkiosztás lehetőségeivel IPv6-környezetben. A tanulók legyenek képesek SLAAC használatára és DHCPv6-kiszolgáló konfigurálására forgalomirányítón. A tanulók ismerjék fel a dinamikus címkiosztás során felmerülő tipikus hibákat, és legyenek képesek azok elhárítására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
