--- a/ptthalo/halo19.html
+++ b/ptthalo/halo19.html
@@ -20,27 +20,23 @@
 
     <main>
       <aside>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="../5-haloanyagok/halo1.html">Anyagaim</a></li>
-            <li><a href="ieta21.html" id="aktiv">Hálózatok I.</a></li>
-            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
-            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+            <li><a href="halo11.html">Hálózatok I. - 1</a></li>
+            <li><a href="halo12.html">Hálózatok I. - 2</a></li>
+            <li><a href="halo13.html">Hálózatok I. - 3</a></li>
+            <li><a href="halo14.html">Hálózatok I. - 4</a></li>
+            <li><a href="halo15.html">Hálózatok I. - 5</a></li>
+            <li><a href="halo16.html">Hálózatok I. - 6</a></li>
+            <li><a href="halo17.html">Hálózatok I. - 7</a></li>
+            <li><a href="halo18.html">Hálózatok I. - 8</a></li>
+            <li><a href="#" id="aktiv">Hálózatok I. - 9</a></li>
+            <li><a href="halo110.html">Hálózatok I. - 10</a></li>
           </ul>
         </nav>
       </aside>
       <section>
-        <nav>
-          <ul>
-            <li><a href="ieta21.html">Informatikai és távközlési hálózatok napjainkban</a></li>
-            <li><a href="ieta22.html">Hálózati protokollok és modellek, végponti eszközök hálózati beállítása</a></li>
-            <li><a href="ieta23.html">Kapcsolás Ethernet hálózatokon, a kapcsoló alapszintű beállítása</a></li>
-            <li><a href="halo12.html">Kapcsolási alapok</a></li>
-            <li><a href="halo14.html">Második rétegbeli redundancia</a></li>
-            <li><a href="#" id="aktiv">Vezeték nélküli technológiák</a></li>
-          </ul>
-        </nav>
-
         <h1>Vezeték nélküli technológiák</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a vezeték nélküli szabványokat, a WLAN topológiákat és a WLAN-ok működését. A tanulók legyenek képesek vezeték nélküli hálózat kialakítására kis- és nagyvállalati környezetben. A tanulók legyenek tisztában a leggyakoribb biztonsági problémákkal, támadási módszerekkel, és tanulják meg, hogyan lehet ellenük védekezni, azokat megelőzni. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
