--- a/ptthalo/ieta22.html
+++ b/ptthalo/ieta22.html
@@ -20,27 +20,20 @@
 
     <main>
       <aside>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="../5-haloanyagok/halo1.html">Anyagaim</a></li>
-            <li><a href="ieta21.html" id="aktiv">Hálózatok I.</a></li>
-            <li><a href="../6-halozatok2/ieta24.html">Hálózatok II.</a></li>
-            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+            <li><a href="ieta21.html">Iéta2 - 1</a></li>
+            <li><a href="#" id="aktiv">Iéta2 - 2</a></li>
+            <li><a href="ieta23.html">Iéta2 - 3</a></li>
+            <li><a href="ieta24.html">Iéta2 - 4</a></li>
+            <li><a href="ieta25.html">Iéta2 - 5</a></li>
+            <li><a href="ieta26.html">Iéta2 - 6</a></li>
+            <li><a href="ieta27.html">Iéta2 - 7</a></li>
+            <li><a href="ieta18.html">Iéta1 - 8</a></li>
           </ul>
-        </nav>
       </aside>
       <section>
-        <nav>
-          <ul>
-            <li><a href="ieta21.html">Informatikai és távközlési hálózatok napjainkban</a></li>
-            <li><a href="#" id="aktiv">Hálózati protokollok és modellek, végponti eszközök hálózati beállítása</a></li>
-            <li><a href="ieta23.html">Kapcsolás Ethernet hálózatokon, a kapcsoló alapszintű beállítása</a></li>
-            <li><a href="halo12.html">Kapcsolási alapok</a></li>
-            <li><a href="halo14.html">Második rétegbeli redundancia</a></li>
-            <li><a href="halo19.html">Vezeték nélküli technológiák</a></li>
-          </ul>
-        </nav>
-
         <h1>Hálózati protokollok és modellek, végponti eszközök hálózati beállítása</h1>
 
         <p>A témakör célja, hogy a tanuló megismerje a leggyakrabban használt hálózati eszközöket és a rétegmodelleket, az átviteli közegek jellemzőit, valamint képes legyen Ethernet-kábel készítésére. A témakör elsajátítását követően a tanuló:</p>
