--- a/ptthalo/ieta26.html
+++ b/ptthalo/ieta26.html
@@ -20,29 +20,20 @@
 
     <main>
       <aside>
+        <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="../5-haloanyagok/halo1.html">Anyagaim</a></li>
-            <li><a href="../5-halozatok/ieta21.html">Hálózatok I.</a></li>
-            <li><a href="ieta24.html" id="aktiv">Hálózatok II.</a></li>
-            <li><a href="../7-halozatok3/halo21.html">Hálózatok III.</a></li>
+            <li><a href="ieta21.html">Iéta2 - 1</a></li>
+            <li><a href="ieta22.html">Iéta2 - 2</a></li>
+            <li><a href="ieta23.html">Iéta2 - 3</a></li>
+            <li><a href="ieta24.html">Iéta2 - 4</a></li>
+            <li><a href="ieta25.html">Iéta2 - 5</a></li>
+            <li><a href="#" id="aktiv">Iéta2 - 6</a></li>
+            <li><a href="ieta27.html">Iéta2 - 7</a></li>
+            <li><a href="ieta18.html">Iéta1 - 8</a></li>
           </ul>
-        </nav>
       </aside>
       <section>
-        <nav>
-          <ul>
-            <li><a href="ieta24.html">A hálózati réteg, IPv4-es és IPv6-os címzés, a forgalomirányító alapszintű beállítása</a></li>
-            <li><a href="#" id="aktiv">Otthoni és kisvállalati hálózat építése és beállítása</a></li>
-            <li><a href="halo11.html">Hálózati eszközök alapszintű konfigurációja</a></li>
-            <li><a href="halo13.html">VLAN-ok használata, VLAN-ok közti forgalomirányítás</a></li>
-            <li><a href="halo15.html">Dinamikus címkiosztás IPv4-környezetben</a></li>
-            <li><a href="halo16.html">IPv6-os címzés és dinamikus címkiosztás IPv6-környezetben</a></li>
-            <li><a href="halo17.html">Harmadik rétegbeli redundancia</a></li>
-            <li><a href="halo110.html">Forgalomirányítási alapok, statikus forgalomirányítás</a></li>
-          </ul>
-        </nav>
-
         <h1>Otthoni és kisvállalati hálózat építése és beállítása</h1>
 
         <p>A témakör célja, hogy a tanulók az eddigi ismereteik felhasználásával képesek legyenek otthoni és kivállalati hálózat összetevőinek azonosítására, kisméretű hálózat fizikai kiépítésére, IP-címzés beállítására, és az alapvető kapcsolódási hibák elhárításra. A témakör elsajátítását követően a tanuló:</p>
