--- a/ptthalo/halo29.html
+++ b/ptthalo/halo29.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Hálózatvirtualizáció, hálózatautomatizáció</title>
+    <title>Hálózatok II.</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="network">Hálózatvirtualizáció, hálózatautomatizáció</h1>
+      <h1 class="network">Hálózatok II.</h1>
     </header>
 
     <main>
